# openclaw-wechat-channel

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  PROMOTION.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  launch-panel.bat
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  question.md  (+1 more)
docs/: CONFIG.md  INSTALL.md  TROUBLESHOOTING.md
scripts/: config.bat  install.bat  start-all.bat  stop-all.bat
wxauto-channel/: config.yaml.template  config_manager.py  monitor.bat  requirements.txt  start.bat  stop.bat  wxauto_channel.py
wxauto-restful-api/: config.yaml.template  pyproject.toml  requirements.txt  run.py  stop.bat
wxauto-restful-api/app/: main.py
wxauto-restful-api/app/api/v1/: activation.py  apps.py  chat.py  files.py  info.py  listen.py  web.py  wechat.py
wxauto-restful-api/app/database/: factory.py  sqlite.py
wxauto-restful-api/app/middleware/: __init__.py  concurrency.py
wxauto-restful-api/app/models/: base.py  file.py  response.py  standard_data.py
wxauto-restful-api/app/models/request/: activation.py  apps.py  chat.py  listen.py  wechat.py
wxauto-restful-api/app/monitoring/: __init__.py  health.py  metrics.py
wxauto-restful-api/app/services/: activation_service.py  app_service.py  chat_service.py  executor.py  file_service.py  init.py  listen_service.py  operation_queue.py  service_manager.py  wechat_service.py
wxauto-restful-api/app/services/applications/: __init__.py  acceptnewfriend.py
wxauto-restful-api/app/utils/: auth.py  config.py  error_handler.py  logger.py  response_builder.py  settings.py  wx_package_manager.py
